COM-912 - fix on iphone 5 screen

--- a/src/css/planning.styl
+++ b/src/css/planning.styl
@@ -148,6 +148,8 @@
         margin: 0 5px
     @media screen and (max-width: 767px)
       justify-content: space-around;
+      .q-btn
+        width: 30px
     div:first-child
       flex-grow: 1
   &-view
